--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="TemplateMacro.h">
       <Filter>头文件\Template\Dependency</Filter>
     </ClInclude>
+    <ClInclude Include="TemplateModule.h">
+      <Filter>头文件\Template</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
