--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
@@ -13,21 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="头文件\Template">
-      <UniqueIdentifier>{b7b5b95e-d454-4c6c-9770-a45fce0a4fab}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="头文件\Template\List">
-      <UniqueIdentifier>{b4c82ede-a74b-4299-8cee-afd8a9317aa1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="头文件\Template\Map">
-      <UniqueIdentifier>{f19af69b-1520-4590-b22b-5aac00f40931}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="头文件\Template\Set">
-      <UniqueIdentifier>{606cfd52-9681-4acc-96b1-a2d654dd70f5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="头文件\Template\Dependency">
-      <UniqueIdentifier>{eda9f70e-a88b-438a-9f38-4cc2d672fe3e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="头文件\Math">
       <UniqueIdentifier>{5b0c8021-2c8e-478b-ac3a-bb30d7d635e1}</UniqueIdentifier>
     </Filter>
@@ -49,6 +34,27 @@
     <Filter Include="源文件\Math\Matrix">
       <UniqueIdentifier>{2067e6c3-11d0-4d4a-8e20-1f0eca202301}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\Math\Common">
+      <UniqueIdentifier>{859d78f1-cb28-4297-8709-edddbad15e70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Container">
+      <UniqueIdentifier>{b7b5b95e-d454-4c6c-9770-a45fce0a4fab}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Container\List">
+      <UniqueIdentifier>{b4c82ede-a74b-4299-8cee-afd8a9317aa1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Container\Map">
+      <UniqueIdentifier>{f19af69b-1520-4590-b22b-5aac00f40931}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Container\Set">
+      <UniqueIdentifier>{606cfd52-9681-4acc-96b1-a2d654dd70f5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Container\Dependency">
+      <UniqueIdentifier>{eda9f70e-a88b-438a-9f38-4cc2d672fe3e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Math\Common">
+      <UniqueIdentifier>{ed766ccc-d08b-4c78-9408-41e43412c5fe}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -67,40 +73,34 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Array.h">
-      <Filter>头文件\Template\List</Filter>
+      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="ArrayList.h">
-      <Filter>头文件\Template\List</Filter>
+      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="Queue.h">
-      <Filter>头文件\Template\List</Filter>
+      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="PriorityQueue.h">
-      <Filter>头文件\Template\List</Filter>
+      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="Stack.h">
-      <Filter>头文件\Template\List</Filter>
+      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="TreeMap.h">
-      <Filter>头文件\Template\Map</Filter>
+      <Filter>头文件\Container\Map</Filter>
     </ClInclude>
     <ClInclude Include="HashMap.h">
-      <Filter>头文件\Template\Map</Filter>
+      <Filter>头文件\Container\Map</Filter>
     </ClInclude>
     <ClInclude Include="HashSet.h">
-      <Filter>头文件\Template\Set</Filter>
+      <Filter>头文件\Container\Set</Filter>
     </ClInclude>
     <ClInclude Include="TreeSet.h">
-      <Filter>头文件\Template\Set</Filter>
+      <Filter>头文件\Container\Set</Filter>
     </ClInclude>
     <ClInclude Include="LinkedList.h">
-      <Filter>头文件\Template\List</Filter>
-    </ClInclude>
-    <ClInclude Include="TemplateDependency.h">
-      <Filter>头文件\Template\Dependency</Filter>
-    </ClInclude>
-    <ClInclude Include="TemplateMacro.h">
-      <Filter>头文件\Template\Dependency</Filter>
+      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="GlobalTypedef.h">
       <Filter>头文件</Filter>
@@ -126,6 +126,15 @@
     <ClInclude Include="Transform.h">
       <Filter>头文件\Math\Matrix</Filter>
     </ClInclude>
+    <ClInclude Include="ContainerDependency.h">
+      <Filter>头文件\Container\Dependency</Filter>
+    </ClInclude>
+    <ClInclude Include="ContainerMacro.h">
+      <Filter>头文件\Container\Dependency</Filter>
+    </ClInclude>
+    <ClInclude Include="MathFunction.h">
+      <Filter>头文件\Math\Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -145,6 +154,12 @@
     </ClCompile>
     <ClCompile Include="Matrix4f.cpp">
       <Filter>源文件\Math\Matrix</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>源文件\Math\Matrix</Filter>
+    </ClCompile>
+    <ClCompile Include="MathIO.cpp">
+      <Filter>源文件\Math\Common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
