--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
@@ -52,8 +52,11 @@
     <Filter Include="头文件\Container\Dependency">
       <UniqueIdentifier>{eda9f70e-a88b-438a-9f38-4cc2d672fe3e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\Math\Common">
-      <UniqueIdentifier>{ed766ccc-d08b-4c78-9408-41e43412c5fe}</UniqueIdentifier>
+    <Filter Include="头文件\Tools">
+      <UniqueIdentifier>{ab28091f-4d5a-452e-9767-e63fc8857faf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Tools">
+      <UniqueIdentifier>{1f1143ff-260d-4b83-aa86-e1a5e86374f4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -71,36 +74,6 @@
     </ClInclude>
     <ClInclude Include="GlobalMacro.h">
       <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Array.h">
-      <Filter>头文件\Container\List</Filter>
-    </ClInclude>
-    <ClInclude Include="ArrayList.h">
-      <Filter>头文件\Container\List</Filter>
-    </ClInclude>
-    <ClInclude Include="Queue.h">
-      <Filter>头文件\Container\List</Filter>
-    </ClInclude>
-    <ClInclude Include="PriorityQueue.h">
-      <Filter>头文件\Container\List</Filter>
-    </ClInclude>
-    <ClInclude Include="Stack.h">
-      <Filter>头文件\Container\List</Filter>
-    </ClInclude>
-    <ClInclude Include="TreeMap.h">
-      <Filter>头文件\Container\Map</Filter>
-    </ClInclude>
-    <ClInclude Include="HashMap.h">
-      <Filter>头文件\Container\Map</Filter>
-    </ClInclude>
-    <ClInclude Include="HashSet.h">
-      <Filter>头文件\Container\Set</Filter>
-    </ClInclude>
-    <ClInclude Include="TreeSet.h">
-      <Filter>头文件\Container\Set</Filter>
-    </ClInclude>
-    <ClInclude Include="LinkedList.h">
-      <Filter>头文件\Container\List</Filter>
     </ClInclude>
     <ClInclude Include="GlobalTypedef.h">
       <Filter>头文件</Filter>
@@ -132,8 +105,38 @@
     <ClInclude Include="ContainerMacro.h">
       <Filter>头文件\Container\Dependency</Filter>
     </ClInclude>
-    <ClInclude Include="MathFunction.h">
+    <ClInclude Include="MathFunction.hpp">
       <Filter>头文件\Math\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Array.hpp">
+      <Filter>头文件\Container\List</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayList.hpp">
+      <Filter>头文件\Container\List</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.hpp">
+      <Filter>头文件\Container\List</Filter>
+    </ClInclude>
+    <ClInclude Include="PriorityQueue.hpp">
+      <Filter>头文件\Container\List</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.hpp">
+      <Filter>头文件\Container\List</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack.hpp">
+      <Filter>头文件\Container\List</Filter>
+    </ClInclude>
+    <ClInclude Include="HashMap.hpp">
+      <Filter>头文件\Container\Map</Filter>
+    </ClInclude>
+    <ClInclude Include="TreeMap.hpp">
+      <Filter>头文件\Container\Map</Filter>
+    </ClInclude>
+    <ClInclude Include="HashSet.hpp">
+      <Filter>头文件\Container\Set</Filter>
+    </ClInclude>
+    <ClInclude Include="TreeSet.hpp">
+      <Filter>头文件\Container\Set</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -157,9 +160,6 @@
     </ClCompile>
     <ClCompile Include="Transform.cpp">
       <Filter>源文件\Math\Matrix</Filter>
-    </ClCompile>
-    <ClCompile Include="MathIO.cpp">
-      <Filter>源文件\Math\Common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
