--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj
@@ -161,12 +161,14 @@
     <ClInclude Include="ContainerDependency.h" />
     <ClInclude Include="ContainerMacro.h" />
     <ClInclude Include="ToolsDependency.h" />
+    <ClInclude Include="ToolsMacro.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="TreeMap.hpp" />
     <ClInclude Include="TreeSet.hpp" />
     <ClInclude Include="Vector2f.h" />
     <ClInclude Include="Vector3f.h" />
     <ClInclude Include="Vector4f.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bitmap.cpp" />
@@ -183,6 +185,7 @@
     <ClCompile Include="Vector2f.cpp" />
     <ClCompile Include="Vector3f.cpp" />
     <ClCompile Include="Vector4f.cpp" />
+    <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
