--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Array.hpp" />
     <ClInclude Include="ArrayList.hpp" />
     <ClInclude Include="Bitmap.h" />
+    <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="ICamera.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="GlobalDependency.h" />
@@ -158,11 +159,13 @@
     <ClInclude Include="MathMacro.h" />
     <ClInclude Include="Matrix4f.h" />
     <ClInclude Include="IObject.h" />
+    <ClInclude Include="PointLight.h" />
     <ClInclude Include="PriorityQueue.hpp" />
     <ClInclude Include="Queue.hpp" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="RayTracerDependency.h" />
     <ClInclude Include="RayTracerMacro.h" />
+    <ClInclude Include="SpotLight.h" />
     <ClInclude Include="Stack.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -180,14 +183,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="ICamera.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="ILight.cpp" />
     <ClCompile Include="IMaterial.cpp" />
     <ClCompile Include="Matrix4f.cpp" />
     <ClCompile Include="IObject.cpp" />
+    <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="RayTracerWithCuda.cpp" />
+    <ClCompile Include="SpotLight.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
