--- a/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
+++ b/RayTracerWithCuda/RayTracerWithCuda.vcxproj.filters
@@ -225,6 +225,15 @@
     <ClInclude Include="Color.h">
       <Filter>头文件\Math\Vector</Filter>
     </ClInclude>
+    <ClInclude Include="DirectionalLight.h">
+      <Filter>头文件\RayTracer\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="PointLight.h">
+      <Filter>头文件\RayTracer\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="SpotLight.h">
+      <Filter>头文件\RayTracer\Light</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -271,6 +280,15 @@
     </ClCompile>
     <ClCompile Include="Color.cpp">
       <Filter>源文件\Math\Vector</Filter>
+    </ClCompile>
+    <ClCompile Include="DirectionalLight.cpp">
+      <Filter>源文件\RayTracer\Light</Filter>
+    </ClCompile>
+    <ClCompile Include="PointLight.cpp">
+      <Filter>源文件\RayTracer\Light</Filter>
+    </ClCompile>
+    <ClCompile Include="SpotLight.cpp">
+      <Filter>源文件\RayTracer\Light</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
